--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="styles/org.css">
 	<link rel="stylesheet" href="styles/responsive.css">
 	<link rel="stylesheet" href="styles/robot.css">
-	<script src="libraries/p5.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js" integrity="sha512-rMaqGbYalDaQz0lWNF2L8DHPtf4NW+gSZomExS0LcsNyRS4Rmj21+dt97XfXCZE/E569eX72Bh//Jt1EpStgiA==" crossorigin="anonymous"></script>
 	<script src="libraries/p5.dom.js"></script>
 </head>
 
