--- a/Bd_Template_Pass/index.html
+++ b/Bd_Template_Pass/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <div class="context">
-      <img src="../pictures/bdpic/defaultpic.gif" alt="defaultpic" />
+      <img src="../pictures/bdpic/Alyssa.jpeg" alt="Alyssa" />
       <h2>
         Happy Birthday
         <br />
