--- a/Bd_Template_Pass/index.html
+++ b/Bd_Template_Pass/index.html
@@ -1,75 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ComSci Department</title>
-    <link rel="stylesheet" href="des.css" />
-    <link rel="stylesheet" href="animation.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Courgette&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Calligraffitti&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bilbo&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Seaweed+Script&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div class="context">
-      <img src="../pictures/bdpic/Alyssa.jpeg" alt="Alyssa" />
-      <h2>
-        Happy Birthday
-        <br />
-        <h3>Alyssa Mae Sampaga</h3>
-      </h2>
-      <br />
-      <p>October 21</p>
-    </div>
-    <div class="con">
-      <div class="set set1">
-        <div class="ball"><div></div></div>
-        <div class="ball"><div></div></div>
-        <div class="ball"><div></div></div>
-        <div class="ball"><div></div></div>
+ <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ComSci Department</title>
+  <link rel="stylesheet" href="des.css" />
+  <link rel="stylesheet" href="animation.css" />
+  <link rel="stylesheet" href="responsive.css" />
 
-        <div class="ball"><div></div></div>
-        <div class="ball"><div></div></div>
-        <div class="ball"><div></div></div>
-        <div class="ball"><div></div></div>
-      </div>
+  <link
+   href="https://fonts.googleapis.com/css2?family=Courgette&display=swap"
+   rel="stylesheet"
+  />
+  <link
+   href="https://fonts.googleapis.com/css2?family=Calligraffitti&display=swap"
+   rel="stylesheet"
+  />
+  <link
+   href="https://fonts.googleapis.com/css2?family=Bilbo&display=swap"
+   rel="stylesheet"
+  />
+  <link
+   href="https://fonts.googleapis.com/css2?family=Seaweed+Script&display=swap"
+   rel="stylesheet"
+  />
+ </head>
+ <body>
+  <div class="context">
+   <div class="image">
+    <img src="../pictures/bdpic/defaultpic.gif" alt="defaultpic" />
+   </div>
+   <h2>
+    Happy Birthday
+    <br />
+    <h3>Name</h3>
+   </h2>
+   <br />
+   <p>Date</p>
+  </div>
+  <div class="con">
+   <div class="set set1">
+    <div class="ball"><div></div></div>
+    <div class="ball"><div></div></div>
+    <div class="ball"><div></div></div>
+    <div class="ball"><div></div></div>
 
-      <div class="set set2">
-        <div class="ball"><div></div></div>
-        <div class="ball"><div></div></div>
-        <div class="ball"><div></div></div>
-        <div class="ball"><div></div></div>
+    <div class="ball"><div></div></div>
+    <div class="ball"><div></div></div>
+    <div class="ball"><div></div></div>
+    <div class="ball"><div></div></div>
+   </div>
 
-        <div class="ball"><div></div></div>
-        <div class="ball"><div></div></div>
-        <div class="ball"><div></div></div>
-        <div class="ball"><div></div></div>
-      </div>
+   <div class="set set2">
+    <div class="ball"><div></div></div>
+    <div class="ball"><div></div></div>
+    <div class="ball"><div></div></div>
+    <div class="ball"><div></div></div>
 
-      <div class="set set3">
-        <div class="ball"><div></div></div>
-        <div class="ball"><div></div></div>
-        <div class="ball"><div></div></div>
-        <div class="ball"><div></div></div>
+    <div class="ball"><div></div></div>
+    <div class="ball"><div></div></div>
+    <div class="ball"><div></div></div>
+    <div class="ball"><div></div></div>
+   </div>
 
-        <div class="ball"><div></div></div>
-        <div class="ball"><div></div></div>
-        <div class="ball"><div></div></div>
-        <div class="ball"><div></div></div>
-      </div>
-    </div>
-  </body>
+   <div class="set set3">
+    <div class="ball"><div></div></div>
+    <div class="ball"><div></div></div>
+    <div class="ball"><div></div></div>
+    <div class="ball"><div></div></div>
+
+    <div class="ball"><div></div></div>
+    <div class="ball"><div></div></div>
+    <div class="ball"><div></div></div>
+    <div class="ball"><div></div></div>
+   </div>
+  </div>
+ </body>
 </html>
