--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 		<ul>
 			<li>Visit our Facebook Page    @ </li>
 			<li> <a href="https://www.facebook.com/passcollege/"> <img src="pictures/logos/facebook.png" alt="facebook"> PASS College Page</a></li>
-			<li><a href="https://www.facebook.com/computerscience/"> <img src="pictures/logos/facebook.png" alt="facebook"> Computer Science Page</a></li>
+			<li><a href="https://www.facebook.com/Computer.Science.Page/"> <img src="pictures/logos/facebook.png" alt="facebook"> Computer Science Page</a></li>
 		</ul>
 		<div class="dev">
 			<img src="pictures/logos/underDev.png" alt="underDev">
