--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>Online Board</title>
-	<link rel="stylesheet" href="styles/index.css">
-	<link rel="stylesheet" href="styles/org.css">
-	<link rel="stylesheet" href="styles/responsive.css">
-	<link rel="stylesheet" href="styles/robot.css">
+	<link crossorigin="anonymous" media="all" rel="stylesheet" href="styles/index.css">
+	<link crossorigin="anonymous" media="all" rel="stylesheet" href="styles/org.css">
+	<link crossorigin="anonymous" media="all" rel="stylesheet" href="styles/responsive.css">
+	<link crossorigin="anonymous" media="all" rel="stylesheet" href="styles/robot.css">
 	
 	
 	<!-- <script src="libraries/p5.dom.js"></script> -->
@@ -270,7 +270,7 @@
 					 
 					<h5>
 					 
-						Ambience Music(hasn't yet uploaded)
+						Ambience Music 
 					 <br>
 					</h5>
 					<a href="Ambience Music.zip" >Download</a>
@@ -300,8 +300,8 @@
 		
 		<ul>
 			<li>Visit our Facebook Page    @ </li>
-			<li> <a href="https://www.facebook.com/passcollege/"> <img src="pictures/logos/facebook.png" alt="facebook"> PASS College Page</a></li>
-			<li><a href="https://www.facebook.com/Computer.Science.Page/"> <img src="pictures/logos/facebook.png" alt="facebook"> Computer Science Page</a></li>
+			<li> <a href=""> <img src="pictures/logos/facebook.png" alt="facebook"> PASS College Page</a></li>
+			<li><a href="#home"> <img src="pictures/logos/facebook.png" alt="facebook"> Computer Science Page</a></li>
 		</ul>
 		<div class="dev">
 			<img src="pictures/logos/underDev.png" alt="underDev">
