--- a/index.html
+++ b/index.html
@@ -268,9 +268,7 @@
 					 Pc Version
 					 <br>
 					 
-					<h5>
-					 
-						Ambience Music 
+					<h5>Ambience Music (hasn't yet uploaded) 
 					 <br>
 					</h5>
 					<a href="Ambience Music.zip" >Download</a>
@@ -300,7 +298,7 @@
 		
 		<ul>
 			<li>Visit our Facebook Page    @ </li>
-			<li> <a href="  https://www.facebook.com/Computer.Science.Page/"> <img src="pictures/logos/facebook.png" alt="facebook"> PASS College Page</a></li>
+			<li> <a href="https://www.facebook.com/Computer.Science.Page/"> <img src="pictures/logos/facebook.png" alt="facebook"> PASS College Page</a></li>
 			<li><a href="https://www.facebook.com/passcollege/"> <img src="pictures/logos/facebook.png" alt="facebook"> Computer Science Page</a></li>
 		</ul>
 		<div class="dev">
